Добавлены ручные тесты, просмотр содержимого текстовых файлов, а также переход от таблицы в спискам и наоборот на странице